fixed pricing table height alignment

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -242,3 +242,12 @@ a.sb.gplus,
 	position: relative;
 	top: -10px;
 }
+
+.pricing_table {
+	height: 400px;
+}
+.ac {
+	display: block;
+	position: relative;
+	bottom: 0;
+}
